--- a/public/roomForm/css/style.css
+++ b/public/roomForm/css/style.css
@@ -54,6 +54,8 @@
     border-radius: 6px;
     box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    overflow-y: auto;
+
 }
 
 .booking-form .gallery-bg {
@@ -62,7 +64,7 @@
     top: -25px;
     bottom: -25px;
     width: 400px;
-    background-color: #856849;
+    /* background-color: #856849; */
     background-size: cover;
     background-position: center;
     padding: 25px;
@@ -87,10 +89,18 @@
     padding: 30px;
 }
 
+.imageGallery {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    justify-content: space-between;
+}
+
 
 .booking-form .form-header {
     margin-bottom: 30px;
-    margin-top: 60px;
+    margin-top: 10px;
     position: relative;
     z-index: 20;
 }
